fix table overflowing out of viewer div

--- a/app/assets/stylesheets/companion_window.css
+++ b/app/assets/stylesheets/companion_window.css
@@ -317,6 +317,7 @@
     #main-display {
       display: flex;
       flex: 1 1 auto;
+      min-width: 0;
     }
   }
 
